--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "google-reviews",
   "version": "1.0.0",
   "private": true,
+  "type": "commonjs",
   "engines": {
     "node": "22.x"
   }
